added firestore to modues

--- a/src/app/pages/welcome/welcome.component.html
+++ b/src/app/pages/welcome/welcome.component.html
@@ -12,7 +12,7 @@
 
     <div class="wrapper" fxLayout="column" >
       <div class="container" fxLayout="column" >
-        <h1>Categories</h1>
+        <h1>Category type</h1>
       </div>
       <div class="form-container" fxLayout="column" >
         <div class="container">
